--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>Origami</title>
 <link rel = "stylesheet" type="text/css" href="style.css"/>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class = "header">
@@ -23,8 +25,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href=""><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href=""><img src = "chameleon.jpg" width="200" height="200"/></a>
+        <h1>Chameleon</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
@@ -34,8 +36,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href="http://origami.me/camel/"><img src = "pigeon.webp" width="200" height="200"/></a>
+        <h1>Pigeon</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
@@ -45,8 +47,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href="http://origami.me/camel/"><img src = "teddy.webp" width="200" height="200"/></a>
+        <h1>Teddy</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
@@ -56,8 +58,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href="http://origami.me/camel/"><img src = "panda.webp" width="200" height="200"/></a>
+        <h1>Panda</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
@@ -67,8 +69,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href="http://origami.me/camel/"><img src = "frog.jpg" width="200" height="200"/></a>
+        <h1>Frog</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
@@ -78,8 +80,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href="http://origami.me/camel/"><img src = "dog.jpg" width="200" height="200"/></a>
+        <h1>Dog</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
@@ -89,8 +91,8 @@
         </p>
     </div>
     <div class="origami">
-        <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
-        <h1>Camel</h1>
+        <a href="http://origami.me/camel/"><img src = "crocodile-.webp" width="200" height="200"/></a>
+        <h1>Crocodile</h1>
         <p>
             <ul>
                 <li>Camel's ear are furry</li>
