--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </div> 
 <div class="grid">
     <div class="origami">
+        <p class="t">Camel Origami</p>
         <a href="http://origami.me/camel/"><img src = "camel.jpg" width="200" height="200"/></a>
         <h1>Camel</h1>
         <p>
@@ -25,6 +26,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Chameleon Origami</p>
         <a href=""><img src = "chameleon.jpg" width="200" height="200"/></a>
         <h1>Chameleon</h1>
         <p>
@@ -36,6 +38,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Pigeon Origami</p>
         <a href="http://origami.me/camel/"><img src = "pigeon.webp" width="200" height="200"/></a>
         <h1>Pigeon</h1>
         <p>
@@ -47,6 +50,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Teddy Origami</p>
         <a href="http://origami.me/camel/"><img src = "teddy.webp" width="200" height="200"/></a>
         <h1>Teddy</h1>
         <p>
@@ -58,6 +62,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Panda Origami</p>
         <a href="http://origami.me/camel/"><img src = "panda.webp" width="200" height="200"/></a>
         <h1>Panda</h1>
         <p>
@@ -69,6 +74,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Frog Origami</p>
         <a href="http://origami.me/camel/"><img src = "frog.jpg" width="200" height="200"/></a>
         <h1>Frog</h1>
         <p>
@@ -80,6 +86,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Dog Origami</p>
         <a href="http://origami.me/camel/"><img src = "dog.jpg" width="200" height="200"/></a>
         <h1>Dog</h1>
         <p>
@@ -91,6 +98,7 @@
         </p>
     </div>
     <div class="origami">
+        <p class="t">Crocodile Origami</p>
         <a href="http://origami.me/camel/"><img src = "crocodile-.webp" width="200" height="200"/></a>
         <h1>Crocodile</h1>
         <p>
